# srp

./: .dockerignore  .env_example  .gitignore  .pdm-python  .zenodo.json  CITATION.cff  CONTRIBUTING.md  Dockerfile  Dockerfile_SNAP11  Dockerfile_SNAP12  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  REVIEWER_SMOKE_TEST.md  SECURITY.md  Singularity.def  WORLDSAR_SIMPLIFICATION_SUMMARY.md  bash_distillation.sh  bash_training.sh  decoder.ipynb  direct_test.py  docker-compose.yml  entrypoint.sh  example_unified_decoder.py  installation.md  launch_tmux_training.sh  main.sh  manage_tmux_sessions.sh  myPipeline.sh  output.txt  paper.bib  paper.md  pyproject.toml  requirements.txt  richall.ipynb  sarSSM.py  search.ipynb  simple_test.py  (+5 more)
SSM4SAR/: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  api.py  check_dependencies.sh  dataloader.py  datamodule.py  fix.sh  main.py  main_sweep.py  nextflow.config  run_train.sh  sarSSM.py  sweep.nf  train_network.py  train_utils.py  trainer.py  utils.py
custom_tools/: l0_l1.py
dataloader/: __init__.py  api.py  create_balanced_dataset_splits.py  dataloader.ipynb  dataloader.py  dataset_creation.py  focusing_pipeline.ipynb  implementation_v0.ipynb  location_utils.py  normalization.py  sar_products_world_map.ipynb  test.py  utils.py  v1.ipynb
docs/: README.md  WORLDSAR_GUIDE.md  WORLDSAR_QUICKREF.md  api_coverage_checklist.json  api_inventory.json  api_inventory_detailed.json  architecture.html  build_site.py  configuration.html  contributing.html  faq.html  figma_diagram_specs.json  generate_snapflow_results.py  generate_static_site.py  index.html  installation.html  quickstart.html  testing.html  usage.html
model/: model_utils.py
notebooks/: 0_unzipper.ipynb  1_data_download.ipynb  2_decoderAPI.ipynb  3_focalizer.ipynb  3_focus.ipynb  4_focalizer_stepped_zarr.ipynb  5_compression.ipynb  data_download.ipynb  decoderAPI.ipynb  deimos_l0_finder.ipynb  energy_thresh.ipynb  focalizer.ipynb  myParsed.txt  mydecoding.txt  product_inspect.ipynb  richParsing.txt  richall.ipynb  richall.txt  selected_products_20251119_135838.csv  snapflow.ipynb  snapflow_v2.ipynb  test_decoder_radar.ipynb
ppt/: SARPyX_project_overview.pptx
processor/: README.md  REFACTORING_SUMMARY.md  __init__.py  constants.py  debug_processor.py  decoder.py  decoding_utils.py  doppler.py  image_formation.py  packet.py  signal_processing.py  state_vectors.py  test_processor.py
pyscripts/: compute_subap_features.py  decode_all_files.py  decode_single.py  down.py  focusing.py  inspector_prod.py  merge_iq_into_pdec.py  preview.py  unzip_all_files.py  upload.py  worldsar-legacy.py  worldsar.py
pyscripts_rel/: decode_all_files.py  decode_single.py  down.py  preview.py  upload.py
sarpyx/: __init__.py  snap.py
scripts/: aws_install.sh  down_s3.sh  download_prod.sh  focus_all_1.sh  focus_all_2.sh  focus_all_3.sh  focus_all_4.sh  focus_single.sh  launcher_focus.sh  main.sh  product_to_focus.txt  push_dockerhub.sh  shipdet.sh  single.sh  snap_install.sh  test_compression.py  tops.sh  upload_grid.sh  uploader.sh
support/: docker-install.sh  snap-install.sh  snap.varfile
tests/: demo_unified_decoder.py  test_balanced_dataloader.py  test_balanced_sampling.py  test_cleanup.py  test_cli_main.py  test_cli_worldsar.py  test_dataset_splits.py  test_docker.py  test_edge_cases.py  test_losses.py  test_merge_iq_into_pdec.py  test_public_imports.py  test_sentinel_subap_pipeline.py  test_simple_balanced_sampling.py  test_slice_fix.py  test_snap2stamps_pipelines.py  test_snapflow_burst_utils.py  test_subaperture_dask.py  test_tensor_shapes.py  test_unified_decoder.py  test_worldsar_h5.py  test_worldsar_tsx.py  test_zarr_compat.py
training/: DISTILLATION_IMPLEMENTATION_GUIDE.md  README_knowledge_distillation.md  README_quantization.md  cv_transformer.yaml  cv_transformer_autoregressive.yaml  distillation_example.py  distillation_script.py  distribution_preserving_distillation.py  enhanced_distillation_guide.py  enhanced_progressive_coupling.py  get_ptq_statistics.py  inference_script.py  mamba_ssm.yaml  (+17 more)
(+600 files in other folders)
